--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    np.exp(lamd, x) * "
+    "    lamd **x) * np.exp(x)"
    ]
   },
   {
