automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    (lamd ** x) * (np.exp(x)) / "
+    "    return (lamd ** x) * (np.exp(x)) / math.factorial(x)"
    ]
   },
   {
