--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    return (lambd ** x) * (np.exp(x)) / factorial(x)"
+    "    return (lambd ** x) * (np.exp(-x)) / factorial(x)"
    ]
   },
   {
