automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    return (lambd ** x) * (np.exp(-x)) / factorial(x)"
+    "    return (lambd ** x) * (np.exp(-lambd)) / factorial(x)"
    ]
   },
   {
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0826822658929016\n"
+      "0.14652511110987343\n"
      ]
     }
    ],
