--- a/index.ipynb
+++ b/index.ipynb
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def poisson_probability(lambd, x):\n",
-    "    return (lambd ** x) * (np.exp(-lambd)) / factorial(x)"
+    "    return ((lambd ** x) * (np.exp(-lambd))) / factorial(x)"
    ]
   },
   {
