--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "lambd_q1 = 4\n",
     "\n",
-    "prob_q1 = poisson_probability(lambd_q1, 2)\n",
+    "prob_q1 = poisson_probability(lambd_q1/4, 2)\n",
     "print(prob_q1)  # Expected Output:  0.18393972058572117"
    ]
   },
