automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,21 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.17497564935561183\n"
+      "0.1692616529599717\n"
      ]
     }
    ],
    "source": [
-    "lambd_q1 = 4 * 52\n",
+    "lambd_q1 = 4 * 12\n",
     "\n",
-    "prob_q1 = poisson_probability(lambd_q1, 2)\n",
+    "prob_q1 = poisson_probability(lambd_q1 / 52, 2)\n",
     "print(prob_q1)  # Expected Output:  0.18393972058572117"
    ]
   },
