--- a/index.ipynb
+++ b/index.ipynb
@@ -67,21 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1692616529599717\n"
+      "0.18393972058572117\n"
      ]
     }
    ],
    "source": [
     "lambd_q1 = 4/4\n",
     "\n",
-    "prob_q1 = poisson_probability(lambd_q1 / 52, 2)\n",
+    "prob_q1 = poisson_probability(lambd_q1, 2)\n",
     "print(prob_q1)  # Expected Output:  0.18393972058572117"
    ]
   },
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambd_q2 = None\n",
+    "lambd_q2 = 4\n",
     "prob_q2 = None\n",
     "print(prob_q2)  # Expected Output: 0.32269606971871956"
    ]
