--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,8 @@
    "outputs": [],
    "source": [
     "mean_weekly_sales = (6+2+5+4)/4\n",
-    "lambd_q5 = poisson_probability(mean_weekly_sales, 3)\n",
-    "prob_q5 = None\n",
+    "lambd_q5 = )\n",
+    "prob_q5 = poisson_probability(mean_weekly_sales, 3))\n",
     "print(prob_q5)  # Expected Output: 0.18250047186175347"
    ]
   },
